--- a/gitops/applications/base/sc-storage/ceph-objectstore-service.yaml
+++ b/gitops/applications/base/sc-storage/ceph-objectstore-service.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ${ARGOCD_ENV_storage_namespace}
   annotations:
     metallb.universe.tf/address-pool: production
+    metallb.universe.tf/loadBalancerIPs: ${ARGOCD_ENV_storage_rgw_external_ip}
   labels:
     app: "${ARGOCD_ENV_storage_namespace}-rgw"
     rook_cluster: ${ARGOCD_ENV_storage_namespace}
