--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -304,6 +304,7 @@ capi_cluster_proxmox_worker_cpu: "'8'"
 capi_cluster_proxmox_worker_memory: "'16384'"
 capi_cluster_proxmox_worker_replicas: "'3'"
 capi_cluster_storage_name: "pve-sdb"
+capi_rook_ceph_rgw_external_ip: "10.10.127.10"
 ##end capi
 
 
