--- a/gitops/applications/overlays/rdbms_provider/percona/db_v2/claim.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db_v2/claim.yaml
@@ -8,7 +8,7 @@ spec:
     consumerClusterType: controlcenter #${ARGOCD_ENV_cluster_type} #TODO
     clusterName: sconprem-01 #${ARGOCD_ENV_cluster_name} #TODO
     externalServiceName: ${ARGOCD_ENV_externalservice_name}
-    appNamesppace: ${ARGOCD_ENV_namespace}
+    appNamespace: ${ARGOCD_ENV_namespace}
     postgres:
       crVersion: "2.5.0"
       pgVersion: 16
