--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -209,7 +209,7 @@ spec:
     #main gitlab db
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
-      path: gitops/applications/overlays/rdbms_provider/${ARGOCD_ENV_gitlab_pre_rdbms_provider}/db_v2
+      path: gitops/applications/overlays/rdbms_provider/${ARGOCD_ENV_gitlab_pre_rdbms_provider}/db
       plugin:
         name: envsubst
         env:
@@ -435,14 +435,14 @@ spec:
 
           - name: "db_port"
             value: "5432"
-    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
-      targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
-      path: gitops/applications/overlays/object_storage_provider/${ARGOCD_ENV_gitlab_pre_object_storage_provider}/gitlab-pre
-      plugin:
-        name: envsubst
-        env:
-          - name: "storage_namespace"
-            value: "${ARGOCD_ENV_utils_storage_namespace}"
+    # - repoURL: ${ARGOCD_ENV_argocd_repo_url}
+    #   targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
+    #   path: gitops/applications/overlays/object_storage_provider/${ARGOCD_ENV_gitlab_pre_object_storage_provider}/gitlab-pre
+    #   plugin:
+    #     name: envsubst
+    #     env:
+    #       - name: "storage_namespace"
+    #         value: "${ARGOCD_ENV_utils_storage_namespace}"
 
-          - name: "cloud_region"
-            value: "${ARGOCD_ENV_gitlab_pre_object_storage_region}"
+    #       - name: "cloud_region"
+    #         value: "${ARGOCD_ENV_gitlab_pre_object_storage_region}"
