add db_name param

--- a/gitops/applications/overlays/rdbms_provider/percona/db_v2/claim.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db_v2/claim.yaml
@@ -13,6 +13,7 @@ spec:
       crVersion: "2.5.0"
       pgVersion: 16
       dbUsername: ${ARGOCD_ENV_db_username}
+      dbName: ${ARGOCD_ENV_db_name}
       dbSecret: ${ARGOCD_ENV_db_secret}
       replicas: ${ARGOCD_ENV_postgres_replicas}
       storageSize: ${ARGOCD_ENV_postgres_storage_size}
