--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-aws-s3-bucket.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-aws-s3-bucket.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: s3buckets.infitx.org
+  name: s3buckets.mojaloop.io
 spec:
-  group: infitx.org
+  group: mojaloop.io
   names:
     kind: S3Bucket
     plural: s3buckets
