crossplane pkg docdb

--- a/gitops/argo-apps/base/crossplane-packages.yaml
+++ b/gitops/argo-apps/base/crossplane-packages.yaml
@@ -49,3 +49,6 @@ spec:
 
         - name: "crossplane_packages_sc_nboperatorinstall_version"
           value: "${ARGOCD_ENV_utils_crossplane_packages_sc_nboperatorinstall_version}"
+
+        - name: "crossplane_packages_docdb_version"
+          value: "${ARGOCD_ENV_utils_crossplane_packages_docdb_version}"
