--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -63,6 +63,7 @@ crossplane_packages_utils_version: "v0.3.0"
 crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
 crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr37-14399026669"
 crossplane_packages_nb_config_version: "v0.1.0-pr38-14361249221"
+crossplane_packages_docdb_version: "v12-14219020439-1"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
 coredns_localcache_version: "1.11.3"
