--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
@@ -117,6 +117,7 @@ common_document_db:
     backup_retention_period: 1
     backup_window: 01:00-04:00
     db_name: common_document_db
+    delete_protection: false
     engine: docdb
     engine_version: 5.0
     family: docdb5.0
