--- a/gitops/applications/base/sc-storage/kustomization.yaml
+++ b/gitops/applications/base/sc-storage/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - ceph-objectstore-service.yaml
-  - ceph-dashboard-loadbalancer.yaml
+  # - ceph-dashboard-loadbalancer.yaml
   - rbac.yaml
   - rgw-endpoint-job.yaml
 
