--- a/gitops/applications/base/sc-storage/namespace.yaml
+++ b/gitops/applications/base/sc-storage/namespace.yaml
@@ -2,3 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: ${ARGOCD_ENV_storage_namespace}
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: ${ARGOCD_ENV_control_center_cluster_name}
