--- a/gitops/applications/base/utils-post-config/crossplane-packages.yaml
+++ b/gitops/applications/base/utils-post-config/crossplane-packages.yaml
@@ -18,7 +18,7 @@ spec:
 apiVersion: pkg.crossplane.io/v1
 kind: Configuration
 metadata:
-  name: buckets
+  name: objectstores
 spec:
-  package: ghcr.io/mojaloop/iac-crossplane-packages/buckets:${ARGOCD_ENV_crossplane_package_buckets_version}
+  package: ghcr.io/mojaloop/iac-crossplane-packages/objectstores:${ARGOCD_ENV_crossplane_package_objectstores_version}
   skipDependencyResolution: true
