--- a/gitops/argo-apps/base/gitlab.yaml
+++ b/gitops/argo-apps/base/gitlab.yaml
@@ -125,3 +125,6 @@ spec:
 
         - name: "object_storage_regional_endpoint"
           value: "${ARGOCD_ENV_utils_storage_object_storage_regional_endpoint}"
+
+        - name: "object_storage_host"
+          value: "${ARGOCD_ENV_utils_storage_object_storage_host}"
