--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -59,7 +59,7 @@ crossplane_func_kcl_version: "0.11.3"
 crossplane_func_auto_ready_version: "0.4.2"
 crossplane_package_buckets_version: "v5-14177549011-1"
 crossplane_package_utils_version: "v5-14171170195-1"
-crossplane_package_databases_version: "v14-14221564364-1"
+crossplane_package_sc_postgres_version: "v0.1.0-pr16-14261304175"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
 coredns_localcache_version: "1.11.3"
