align claim with new package and api

--- a/gitops/applications/overlays/rdbms_provider/percona/db/claim.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db/claim.yaml
@@ -1,5 +1,5 @@
-apiVersion: database.mojaloop.io/v1alpha1
-kind: SqlPercona
+apiVersion: sc.mojaloop.io/v1alpha1
+kind: PGCluster
 metadata:
   name: ${ARGOCD_ENV_db_name}
   namespace: ${ARGOCD_ENV_namespace}
