--- a/gitops/argo-apps/base/utils-post-config.yaml
+++ b/gitops/argo-apps/base/utils-post-config.yaml
@@ -86,3 +86,9 @@ spec:
 
         - name: "aws_iam_crossplane_provider_version"
           value: "${ARGOCD_ENV_utils_post_config_aws_iam_crossplane_provider_version}"
+
+        - name: "aws_ec2_crossplane_provider_version"
+          value: "${ARGOCD_ENV_utils_post_config_aws_ec2_crossplane_provider_version}"
+
+        - name: "aws_docdb_crossplane_provider_version"
+          value: "${ARGOCD_ENV_utils_post_config_aws_docdb_crossplane_provider_version}"
