--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -54,6 +54,8 @@ crossplane_providers_netbird_version: "0.0.11"
 crossplane_providers_aws_version: "0.49.2"
 crossplane_providers_aws_s3_version: "1.21.0"
 crossplane_providers_aws_iam_version: "1.21.0"
+crossplane_providers_aws_docdb_version: "1.21.0"
+crossplane_providers_aws_aws_ec2_version: "1.21.0"
 crossplane_functions_patch_and_transform_version: "0.8.2"
 crossplane_functions_go_templating_version: "0.8.0"
 crossplane_functions_kcl_version: "0.11.3"
