--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -53,6 +53,8 @@ aws_crossplane_provider_version: "0.49.2"
 k8s_crossplane_provider_version: "0.11.4"
 aws_s3_crossplane_provider_version: "1.21.0"
 aws_iam_crossplane_provider_version: "1.21.0"
+aws_ec2_crossplane_provider_version: "1.21.0"
+aws_docdb_crossplane_provider_version: "1.21.0"
 crossplane_func_patch_and_transform_version: "0.8.2"
 crossplane_func_go_templating_version: "0.8.0"
 crossplane_func_kcl_version: "0.11.3"
