--- a/gitops/applications/base/utils-post-config/crossplane-packages.yaml
+++ b/gitops/applications/base/utils-post-config/crossplane-packages.yaml
@@ -26,7 +26,7 @@ spec:
 apiVersion: pkg.crossplane.io/v1
 kind: Configuration
 metadata:
-  name: aws-docdbcluster
+  name: docdb
 spec:
-  package: ghcr.io/mojaloop/iac-crossplane-packages/aws-docdbcluster:${ARGOCD_ENV_crossplane_package_docdb_version}
+  package: ghcr.io/mojaloop/iac-crossplane-packages/docdb:${ARGOCD_ENV_crossplane_package_docdb_version}
   skipDependencyResolution: true
