--- a/gitops/applications/overlays/mongodb_provider/documentdb/kustomization.yaml
+++ b/gitops/applications/overlays/mongodb_provider/documentdb/kustomization.yaml
@@ -2,3 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - docdbcluster.yaml
+  - docdb-secrets.yaml
+  - docdb-external-name-service.yaml
