--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
@@ -119,7 +119,7 @@ common_document_db:
     db_name: common_document_db
     delete_protection: false
     engine: docdb
-    engine_version: 5.0
+    engine_version: "5.0"
     family: docdb5.0
     final_snapshot_identifier: common_document_db_final_snapshot
     instance_address_key_name: common_document_db_instance_address
