generic monolith loops

--- a/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
@@ -145,6 +145,7 @@ bulk-mongodb:
     storage_encrypted: true
     skip_final_snapshot: true
     enabled_cloudwatch_logs_exports: []
+    monolith_db_server: common_document_db
 reporting-events-mongodb:
   external_resource_config:
     cluster_size: 1
@@ -169,6 +170,7 @@ reporting-events-mongodb:
     storage_encrypted: true
     skip_final_snapshot: true
     enabled_cloudwatch_logs_exports: []
+    monolith_db_server: common_document_db
 ttk-mongodb:
   external_resource_config:
     cluster_size: 1
@@ -193,6 +195,7 @@ ttk-mongodb:
     storage_encrypted: true
     skip_final_snapshot: true
     enabled_cloudwatch_logs_exports: []
+    monolith_db_server: common_document_db
 mojaloop-kafka:
   external_resource_config:
     name: msk
