--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
@@ -57,6 +57,8 @@ common_platform_db:
     master_user_password_secret_key: password
     logical_service_name: common_platform_db
     logical_service_port: 3306
+    vault_master_user_password_secret_key: common_platform_db_password
+    vault_instance_address_key: common_platform_db_instance_address
 common_mojaloop_db:
   app_owner: "mojaloop"
   external_resource_config:
@@ -108,6 +110,8 @@ common_mojaloop_db:
     master_user_password_secret_key: password
     logical_service_name: common-mojaloop-db
     logical_service_port: 3306
+    vault_master_user_password_secret_key: common_mojaloop_db_password
+    vault_instance_address_key: common_mojaloop_db_instance_address
 common_document_db:
   app_owner: "mojaloop"
   external_resource_config:
@@ -147,3 +151,5 @@ common_document_db:
     master_user_password_secret_key: password
     logical_service_name: common-mojaloop-db
     logical_service_port: 27017
+    vault_master_user_password_secret_key: common_mongodb_password
+    vault_instance_address_key: common_mongodb_instance_address
