--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -30,8 +30,8 @@ resources:
   - ../../../base/dns-utils-post-config.yaml
   - ../../../base/dns-utils-pre.yaml
   # maintenance (velero,etc)
-  - ../../../base/maintenance.yaml
-  - ../../../base/maintenance-pre.yaml
+  # - ../../../base/maintenance.yaml
+  # - ../../../base/maintenance-pre.yaml
   # security
   - ../../../base/zitadel-pre.yaml
   - ../../../base/zitadel.yaml
