--- a/terraform/k8s/default-config/pm4ml-vars.yaml
+++ b/terraform/k8s/default-config/pm4ml-vars.yaml
@@ -17,6 +17,8 @@ pm4ml_reserve_notification: false
 currency: ${currency}
 fxp_id: "fxp"
 core_connector_config: {}
-payment_token_adapter_config: {}
+payment_token_adapter_config: {
+  enabled: false
+}
 ui_custom_config:
   TITLE: Payment Manager
