--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -10,16 +10,18 @@ resources:
   - ../../../base/reflector.yaml
   - ../../../base/reloader.yaml
   - ../../../base/crossplane.yaml
-  - ../../../base/utils-post-config.yaml
+  - ../../../base/crossplane-providers.yaml
+  - ../../../base/crossplane-functions.yaml
+  - ../../../base/crossplane-packages.yaml
   - ../../../base/istio.yaml
   - ../../../base/istio-gw.yaml
   - ../../../base/cert-manager.yaml
   - ../../../base/capi-operator.yaml
   - ../../../base/capi.yaml
   - ../../../base/capi-post-config.yaml
-  - ../../../base/percona-operator.yaml
   - ../../../base/redis-operator.yaml
   - ../../../base/base-monitoring.yaml
+  - ../../../base/kyverno.yaml
   # xplane database config
   - ../../../base/xplane-provider-config.yaml
   # vault
