fix crossplane namespace

--- a/gitops/applications/base/crossplane-providers/rbac.yaml
+++ b/gitops/applications/base/crossplane-providers/rbac.yaml
@@ -23,7 +23,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: crossplane-terraform-sa
-    namespace: ${ARGOCD_ENV_crossplane_namespace}
+    namespace: crossplane-system
 roleRef:
   name: crossplane-clusterrole-clusterrole
   kind: ClusterRole
