--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -59,7 +59,7 @@ crossplane_functions_go_templating_version: "0.8.0"
 crossplane_functions_kcl_version: "0.11.3"
 crossplane_functions_auto_ready_version: "0.4.2"
 crossplane_packages_objectstores_version: "v17-14259904996-1"
-crossplane_packages_utils_version: "v5-14171170195-1"
+crossplane_packages_utils_version: "v0.2.0"
 crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
