--- a/gitops/applications/overlays/mongodb_provider/documentdb/docdbcluster.yaml
+++ b/gitops/applications/overlays/mongodb_provider/documentdb/docdbcluster.yaml
@@ -1,4 +1,4 @@
-apiVersion: database.mojaloop.io/v1alpha1
+apiVersion: aws.mojaloop.io/v1alpha1
 kind: XDocDbCluster
 metadata:
   name: "${ARGOCD_ENV_cluster_name}-${ARGOCD_ENV_dbdeploy_name_prefix}"
